# redirects

./: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
k8s/: deployment.yaml
redirects/: __init__.py  __main__.py  data.py  redirects.py
