[tool.poetry]
name = "cal-redirects"
version = "0.1.0"
description = "Key / value lookup of IDs to redirects"
authors = ["Charles de Freitas <charles@defreitas.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.60.1"
uvicorn = "^0.11.7"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
